# Termrs

./: Cargo.toml  LICENSE  README.md
examples/: simple.rs
src/: buffer.rs  core.rs  input.rs  layout.rs  lib.rs  style.rs  visual.rs
src/buffer/: buffer.rs  memory_buffer.rs  terminal.rs
src/core/: app.rs  event_loop.rs  position.rs  rect.rs  size.rs
src/input/: event_args.rs  input_handler.rs
src/layout/: layout.rs  margin.rs  offset.rs
src/style/: style.rs  styled.rs
src/visual/: content_visual.rs  input.rs  layout.rs  mutable_context.rs  tree_visual.rs  visual.rs  visuals.rs
src/visual/layout/: layout.rs  offset.rs
src/visual/visuals/: text_block.rs
