[package]
name = "termrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27" }
termion = { version = "3.0", optional = true }
termwiz = { version = "0.22.0", optional = true }
bitflags = "2.4.2"